--- a/sip-servlets-examples/shopping-demo-jsr309/pom.xml
+++ b/sip-servlets-examples/shopping-demo-jsr309/pom.xml
@@ -3,13 +3,19 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.examples</groupId>
 		<artifactId>sip-servlets-examples-parent</artifactId>
-		<version>1.8.0-SNAPSHOT</version>
+		<version>2.1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>shopping-demo-parent-jsr309</artifactId>
 	<packaging>pom</packaging>
 	<name>Shopping Demo Parent</name>
 	<url>http://www.mobicents.org/shopping-demo-jsr309.html</url>
+	<properties>
+		<hibernate-annotations.version>3.3.0.ga</hibernate-annotations.version>
+		<hibernate-common-annotations.version>3.0.0.ga</hibernate-common-annotations.version>
+		<hibernate-validator.version>3.0.0.ga</hibernate-validator.version>	
+		<lucene-core.version>2.2.0</lucene-core.version>
+	</properties>
 	<modules>
 		<module>business</module>
 		<module>web</module>
