--- a/sip-servlets-examples/websocket-b2bua/.project
+++ b/sip-servlets-examples/websocket-b2bua/.project
@@ -1,7 +1,11 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>websocket-b2bua</name>
+  <name>websockets-sip-servlet</name>
   <comment>Mobicents SIP Servlets. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
-  <projects/>
+  <projects>
+    <project>sip-servlets-spec</project>
+    <project>sip-servlets-client</project>
+  </projects>
   <buildSpec>
     <buildCommand>
       <name>org.eclipse.jdt.core.javabuilder</name>
