--- a/management/sip-servlets-management/pom.xml
+++ b/management/sip-servlets-management/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-	<parent>
-		<groupId>org.mobicents.servlet.sip</groupId>
-		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>6.1.3-TelScale-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath>
+	<parent>		 
+		<groupId>org.mobicents.servlet.sip</groupId>		 
+		<artifactId>sip-servlets-bootstrap</artifactId>		 
+		<version>2.1.0-SNAPSHOT</version>		 
+		<relativePath>../../pom.xml</relativePath>		 
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
