--- a/management/jopr-plugin-as-5/pom.xml
+++ b/management/jopr-plugin-as-5/pom.xml
@@ -29,6 +29,12 @@
                               <updatePolicy>never</updatePolicy>
                       </snapshots>
               </repository>
+	      <repository>
+                        <id>maven2-repository.dev.java.net</id>
+                        <name>Java.net Repository for Maven</name>
+                        <url>http://download.java.net/maven/2/</url>
+                        <layout>default</layout>
+                </repository>
       </repositories>
 
 <scm>
