--- a/management/sip-servlets-management/src/main/webapp/WEB-INF/web.xml
+++ b/management/sip-servlets-management/src/main/webapp/WEB-INF/web.xml
@@ -1,3 +1,3 @@
 <web-app>
-	<display-name>Mobicents JAIN SLEE Management</display-name> 
+	<display-name>Mobicents SIP Servlets Management</display-name> 
 </web-app>
