--- a/sip-servlets-test-suite/testsuite/src/test/resources/org/mobicents/servlet/sip/testsuite/testsuite.properties
+++ b/sip-servlets-test-suite/testsuite/src/test/resources/org/mobicents/servlet/sip/testsuite/testsuite.properties
@@ -6,7 +6,7 @@
 #project.home=E:/workspaces/sip-servlets
 #jeand linux props
 #tomcat.home=/home/jean/servers/MSS/mss-1.8.0-SNAPSHOT-apache-tomcat-7.0.27
-tomcat.home=/home/jean/servers/MSS/tomcat-7.0.27
-tomcat.backup.home=/home/jean/servers/tomcat-7.0.27-backup
-project.home=/home/jean/workspaces/sip-servlets
+tomcat.home=/media/jean/Data/servers/MSS/mss-2.1.0-SNAPSHOT-apache-tomcat-7.0.33
+tomcat.backup.home=/media/jean/Data/servers/MSS/mss-2.1.0-SNAPSHOT-apache-tomcat-7.0.33-backup
+project.home=/media/jean/Data/workspaces/sipservlets
 
