--- a/sip-servlets-arquillian-testsuite/pom.xml
+++ b/sip-servlets-arquillian-testsuite/pom.xml
@@ -16,7 +16,7 @@
 
 	<groupId>org.mobicents.servlet.sip.arquillian.testsuite</groupId>
 	<artifactId>sip-servlets-arquillian-testsuite</artifactId>
-	<version>1.8.0-SNAPSHOT</version>
+	<version>2.1.0-SNAPSHOT</version>
 	<name>sip-servlets-arquillian-testsuite</name>
 
 	<packaging>pom</packaging>
@@ -45,7 +45,7 @@
 		<version.weld_servlet>1.1.2.Final</version.weld_servlet>
 		<version.ctf.core>1.0.0-SNAPSHOT</version.ctf.core>
 		<version.org.apache.tomcat>6.0.33</version.org.apache.tomcat>
-		<version.org.apache.tomcat-7>7.0.27</version.org.apache.tomcat-7>
+		<version.org.apache.tomcat-7>7.0.33</version.org.apache.tomcat-7>
 
 		<!-- override from parent -->
 		<version.release.plugin>2.1</version.release.plugin>
@@ -53,8 +53,8 @@
 		<maven.compiler.source>1.5</maven.compiler.source>
 
 		<!-- Mobicents -->
-		<version.org.mobicents.servlet.sip>1.8.0-SNAPSHOT</version.org.mobicents.servlet.sip>
-		<version.mss.arquillian>1.0.0-ALPHA1</version.mss.arquillian>
+		<version.org.mobicents.servlet.sip>2.1.0-SNAPSHOT</version.org.mobicents.servlet.sip>
+		<version.mss.arquillian>1.0.0-CR1</version.mss.arquillian>
 		<version.sipunit>2.0.0</version.sipunit>
 		<version.mobicents.jain.sip.ext>1.0</version.mobicents.jain.sip.ext>
 		<version.mobicents.jain.sip.jboss4>1.2.0.FINAL</version.mobicents.jain.sip.jboss4>
