--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
 		<mobicents.cluster.version>1.14.0.FINAL</mobicents.cluster.version>
 		<mobicents.balancer.version>1.7.0-SNAPSHOT</mobicents.balancer.version>
 		<mobicents.jain.sip.ha.version>1.5.0-SNAPSHOT</mobicents.jain.sip.ha.version>
-		<mobicents.jain.sip.ext.version>1.2.0.FINAL</mobicents.jain.sip.ext.version>
+		<mobicents.jain.sip.ext.version>1.3.0-SNAPSHOT</mobicents.jain.sip.ext.version>
 		<tomcat-7.version>7.0.42</tomcat-7.version>
 	</properties>
 
