--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>mobicents-parent</artifactId>
 		<groupId>org.mobicents</groupId>
-		<version>2.25-SNAPSHOT</version>
+		<version>2.27.4</version>
 	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-bootstrap</artifactId>
@@ -89,10 +89,10 @@
 
 	<properties>
 		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.FINAL</mobicents.tools.mavenplugin.eclipse.version>
-		<mobicents.cluster.version>1.14.0.FINAL</mobicents.cluster.version>
-		<mobicents.balancer.version>1.7.0-SNAPSHOT</mobicents.balancer.version>
-		<mobicents.jain.sip.ha.version>1.5.0-SNAPSHOT</mobicents.jain.sip.ha.version>
-		<mobicents.jain.sip.ext.version>1.3.0-SNAPSHOT</mobicents.jain.sip.ext.version>
+		<mobicents.cluster.version>1.15.6</mobicents.cluster.version>
+		<mobicents.balancer.version>1.7.4</mobicents.balancer.version>
+		<mobicents.jain.sip.ha.version>1.5.4</mobicents.jain.sip.ha.version>
+		<mobicents.jain.sip.ext.version>1.3.1</mobicents.jain.sip.ext.version>
 		<tomcat-7.version>7.0.50</tomcat-7.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
