--- a/sip-servlets-arquillian-testsuite/pom.xml
+++ b/sip-servlets-arquillian-testsuite/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<!-- <parent> <groupId>org.mobicents.servlet.sip</groupId> <artifactId>sip-servlets-bootstrap</artifactId> 
 		<version>1.7.0-SNAPSHOT</version> <relativePath>../sip-servlets-bootstrap/pom.xml</relativePath> 
@@ -11,7 +10,7 @@
 		<groupId>org.jboss</groupId>
 		<artifactId>jboss-parent</artifactId>
 		<version>9</version>
-		<relativePath />
+		<relativePath/>
 	</parent>
 
 	<groupId>org.mobicents.servlet.sip.arquillian.testsuite</groupId>
@@ -65,11 +64,10 @@
 	</properties>
 
 	<modules>
-		<module>simple</module>
 		<module>simple-tc7</module>
-		<module>click2call</module>
 		<module>click2call-tc7</module>
-	</modules>
+    <module>ProxyTest</module>
+  </modules>
 
 	<dependencyManagement>
 		<dependencies>
