--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,8 @@ docs/sources-telscale/src/
 **/logs/
 
 
+
+*.classpath
+sip-servlets-test-suite/applications/timers-sip-servlet/.project
+*.project
+*.classpath
