--- a/containers/sip-servlets-catalina-8/pom.xml
+++ b/containers/sip-servlets-catalina-8/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>7.0.3-TelScale-SNAPSHOT</version>
+		<version>3.0.0-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.containers</groupId>
@@ -16,17 +16,17 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>7.0.3-TelScale-SNAPSHOT</version>			
+			<version>3.0.0-SNAPSHOT</version>			
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-impl</artifactId>
-			<version>7.0.3-TelScale-SNAPSHOT</version>			
+			<version>3.0.0-SNAPSHOT</version>			
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-core-api</artifactId>
-			<version>7.0.3-TelScale-SNAPSHOT</version>			
+			<version>3.0.0-SNAPSHOT</version>			
 		</dependency>
 		<dependency>
 			<groupId>javax.sip</groupId>
